--- a/mobile/src/main/res/layout/list_item_recommend.xml
+++ b/mobile/src/main/res/layout/list_item_recommend.xml
@@ -8,11 +8,10 @@
         <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_gravity="center"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardUseCompatPadding="true"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_margin="4dp"
                 card_view:cardCornerRadius="4dp">
 
                 <TextView
