--- a/mobile/src/main/res/layout/list_item_recommend.xml
+++ b/mobile/src/main/res/layout/list_item_recommend.xml
@@ -1,23 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card_view="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:gravity="center"
-              android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/card_view"
+        style="@style/CardView.RecommendStyle">
 
-        <android.support.v7.widget.CardView
-                android:id="@+id/card_view"
-                android:layout_gravity="center"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:cardUseCompatPadding="true"
-                android:layout_margin="4dp"
-                card_view:cardCornerRadius="4dp">
+                android:orientation="vertical">
 
-                <TextView
-                        android:id="@+id/info_text"
+                <RelativeLayout
                         android:layout_width="match_parent"
-                        android:gravity="center"
-                        android:layout_height="wrap_content" />
-        </android.support.v7.widget.CardView>
-</LinearLayout>
+                        android:layout_height="match_parent">
+                        <ImageView
+                                android:id="@+id/recommend_image"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/image_commend_009"
+                                android:adjustViewBounds="true"/>
+                        <ImageButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="@dimen/recommend_ic_favorites_margin_right"
+                                android:layout_marginTop="@dimen/recommend_ic_favorites_margin_top"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentTop="true"
+                                android:background="@drawable/bg_recommend_favorites_selector"/>
+                </RelativeLayout>
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="@dimen/recommend_content_margin">
+
+                        <TextView
+                                android:id="@+id/category_tv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/yellow"
+                                android:text="养生"/>
+
+                        <TextView
+                                android:id="@+id/title_tv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="这是仅仅只是一个测试，不用太紧张"/>
+                </LinearLayout>
+
+        </LinearLayout>
+
+</android.support.v7.widget.CardView>
