--- a/mobile/src/main/res/layout/nav_header.xml
+++ b/mobile/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="172dp"
+        android:layout_height="@dimen/nav_header_height"
         android:background="@color/theme_primary_dark">
 
         <TextView android:layout_width="match_parent"
