--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -3,6 +3,12 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="100"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
+        android:icon="@mipmap/ic_search_white_24dp"
         android:title="@string/search" />
+
+    <item
+            android:id="@+id/action_refresh"
+            android:title="@string/refresh"
+            app:showAsAction="never" />
 </menu>
