--- a/mobile/src/main/res/layout/fragment_topic.xml
+++ b/mobile/src/main/res/layout/fragment_topic.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TextView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:text="@string/topic"/>
-</LinearLayout>
+<android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/topic_recyclerView"
+        android:scrollbars="vertical"
+        android:clipToPadding="false"
+        android:padding="@dimen/topic_recycleview_padding"
+        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
