--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="theme_colorWhite">#FFFFFF</color>
     <color name="colorOrange">#EF6C00</color>
     <color name="colorOrangeDark">#E65100</color>
-    <color name="green">#689F38</color>
+    <color name="green">#4CAF50</color>
     <color name="yellow">#fff0ff3e</color>
 
     <color name="theme_primary">#4CAF50</color>
