--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
     <dimen name="recommend_ic_favorites_margin_right">5dp</dimen>
     <dimen name="recommend_content_margin">5dp</dimen>
     <dimen name="recommend_recycleview_padding">4dp</dimen>
+
+    <dimen name="topic_cardview_margin">6dp</dimen>
+    <dimen name="topic_corner_radius">4dp</dimen>
+    <dimen name="topic_recycleview_padding">6dp</dimen>
+
+
 </resources>
