--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="green">#4CAF50</color>
     <color name="yellow">#fff0ff3e</color>
 
-    <color name="theme_primary">#4CAF50</color>
-    <color name="theme_primary_dark">#388E3C</color>
+    <color name="theme_primary">#ff58be00</color>
+    <color name="theme_primary_dark">#ff4daa00</color>
     <color name="theme_primary_dark2">#006064</color>
     <color name="theme_accent">#FF4081</color>
 
